--- a/Alappuzha.html
+++ b/Alappuzha.html
@@ -61,7 +61,7 @@
       <h3 id="spotheading">Top Three Destination</h3>
       <div class="card-group">
         <div class="card">
-          <img src="./img/alpzhamararibeach.jpg" class="card-img-top" alt="mbeach">
+          <img src="./img/alpzhamararibeach.jpg" class="card-img-top" alt="mbeach" width="300px" height="300px">
           <div class="card-body">
             <h5 class="card-title">Marari Beach</h5>
             <p class="card-text">Marari Beach is a beach in Alappuzha District of Kerala, India, 11 km from Alappuzha town.</p>
@@ -71,7 +71,7 @@
           </div> -->
         </div>
         <div class="card">
-          <img src="./img/alapuzhabeach.jpg" class="card-img-top" alt="...">
+          <img src="./img/alapuzhabeach.jpg" class="card-img-top" alt="..." width="300px" height="300px">
           <div class="card-body">
             <h5 class="card-title">Alappuzha Beach</h5>
             <p class="card-text">Alappuzha Beach is a beach in Alappuzha town and a tourist attraction in Kerala, India. </p>
@@ -81,7 +81,7 @@
           </div> -->
         </div>
         <div class="card">
-          <img src="./img/alapzhaisland.jpg" class="card-img-top" alt="pic">
+          <img src="./img/alapzhaisland.jpg" class="card-img-top" alt="pic" width="300px" height="300px">
           <div class="card-body">
             <h5 class="card-title">Pathiramanal Island</h5>
             <p class="card-text">Pathiramanal is a small island inMuhamma panchayat of Alappuzha district. The name Pathiramanal means 'midnight sand'. <a href="https://en.wikipedia.org/wiki/Pathiramanal">wikipedia</a></p>
