--- a/Alappuzha.html
+++ b/Alappuzha.html
@@ -18,7 +18,7 @@
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/index.html#loginform">Login</a>
+            <a class="nav-link" href="index.html#loginform">Login</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="Signup.html">Sign Up</a>
