--- a/Ernakulam.html
+++ b/Ernakulam.html
@@ -60,7 +60,7 @@
         <h3 id="spotheading">Top Three Destination</h3>
         <div class="card-group">
           <div class="card">
-            <img src="./img/ernhillpalce.jfif" class="card-img-top" alt="mbeach">
+            <img src="./img/ernhillpalce.jfif" class="card-img-top" alt="mbeach" width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Hill Palace Museum</h5>
               <p class="card-text">Hill Palace is an archaeological museum and palace located in the Tripunithura neighbourhood of Kochi city in the Indian state of Kerala. It is the largest archeological museum in the state and was the imperial administrative office and official residence of the Cochin Maharaja.</p>
@@ -68,7 +68,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/ernkettuvallam-bridge-maine-drive.jpg" class="card-img-top" alt="...">
+            <img src="./img/ernkettuvallam-bridge-maine-drive.jpg" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Marine Drive</h5>
               <p class="card-text">Marine Drive is a buzzing waterfront district known for the Marine Walkway, popular for evening strolls, and leafy Subhash Bose Park. </p>
@@ -76,7 +76,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/ernmattpalce.jfif" class="card-img-top" alt="...">
+            <img src="./img/ernmattpalce.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Mattancherry Palace</h5>
               <p class="card-text">The Mattancherry Palace is a Portuguese palace popularly known as the Dutch Palace, in Mattancherry, Kochi, in the Indian state of Kerala which features Kerala murals depicting portraits and exhibits of the Rajas of Kochi. </p>
