--- a/Idukki.html
+++ b/Idukki.html
@@ -61,7 +61,7 @@
         <h3 id="spotheading">Top Three Destination</h3>
         <div class="card-group">
           <div class="card">
-            <img src="./img/idukkieravipark.jpg" class="card-img-top" alt="mbeach">
+            <img src="./img/idukkieravipark.jpg" class="card-img-top" alt="mbeach" width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Eravikulam National Park</h5>
               <p class="card-text">Eravikulam National Park is a 97 km² national park located along the Western Ghats in the Idukki and Ernakulam districts of Kerala in India. Situated between 10º05'N and 10º20' north, and 77º0' and 77º10' east, it is the first national park in Kerala. </p>
@@ -69,7 +69,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/idukkidam.jfif" class="card-img-top" alt="...">
+            <img src="./img/idukkidam.jfif" class="card-img-top" alt="..."width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Idukki Dam</h5>
               <p class="card-text">The Idukki Dam is a double curvature Arch dam constructed across the Periyar River in a narrow gorge between two granite hills locally known as Kuravan and Kurathi in Mariyapuram village in Idukki District in Kerala, India. At 168.91 metres, it is one of the highest arch dams in Asia. It is constructed and owned by the Kerala State Electricity Board. </p>
@@ -77,7 +77,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/idukkimeesapuli.jfif" class="card-img-top" alt="...">
+            <img src="./img/idukkimeesapuli.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Meesapulimala</h5>
               <p class="card-text">Meesapulimala is an Indian peak, the next south of the second highest peak of the Western Ghats on the Idukki District and Theni District border. Its peak is 2,640 metres above sea level. The name derives from its appearance from the southwest of a tiger with prominent whiskers.</p>
