--- a/Kannur.html
+++ b/Kannur.html
@@ -58,7 +58,7 @@
         <h3 id="spotheading">Top Three Destination</h3>
         <div class="card-group">
           <div class="card">
-            <img src="./img/KANNUR-FORT.jpg" class="card-img-top" alt="mbeach">
+            <img src="./img/KANNUR-FORT.jpg" class="card-img-top" alt="mbeach" width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">St. Angelo Fort (Kannur Fort)</h5>
               <p class="card-text">St. Angelo Fort is a fort facing the Arabian Sea, situated 3 km from Kannur, a city in Kerala state, south India.</p>
@@ -66,7 +66,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/kannurlighthouse.jfif" class="card-img-top" alt="...">
+            <img src="./img/kannurlighthouse.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Kannur Light House</h5>
               <p class="card-text">The Kannur Lighthouse is located near the Payyambalam Beach, a few kilometers from Kannur town, in Kerala state, south India. It is adjacent to the Sea View Park and the Government Guest House.  </p>
@@ -74,7 +74,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/kannurpaybeach.jfif" class="card-img-top" alt="...">
+            <img src="./img/kannurpaybeach.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Payyambalam Beach</h5>
               <p class="card-text">Swimming, surfing & picnic spot</p>
