--- a/Kasaragod.html
+++ b/Kasaragod.html
@@ -57,7 +57,7 @@
         <h3 id="spotheading">Top Three Destination</h3>
         <div class="card-group">
           <div class="card">
-            <img src="./img/kasrgodraniprm.jfif" class="card-img-top" alt="mbeach">
+            <img src="./img/kasrgodraniprm.jfif" class="card-img-top" alt="mbeach" width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Ranipuram</h5>
               <p class="card-text">Ranipuram is a village and a major tourist attraction in the Kasaragod district of the Indian state of Kerala.</p>
@@ -65,7 +65,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/kasgodfort.jfif" class="card-img-top" alt="...">
+            <img src="./img/kasgodfort.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Bekal Fort</h5>
               <p class="card-text">Bekal Fort was built by Shivappa Nayaka of Keladi in 1650 AD, at Bekal. It is the largest fort in Kerala, spreading over 40 acres. </p>
@@ -73,7 +73,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/kasargodvaliyap.jfif" class="card-img-top" alt="...">
+            <img src="./img/kasargodvaliyap.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Valiyaparamba</h5>
               <p class="card-text">Valiyaparamba is a coastal island in Hosdurg taluk, Kasaragod district, Kerala state, India</p>
