--- a/Kollam.html
+++ b/Kollam.html
@@ -58,7 +58,7 @@
         <h3 id="spotheading">Top Three Destination</h3>
         <div class="card-group">
           <div class="card">
-            <img src="./img/kollamasthilakee.jfif" class="card-img-top" alt="mbeach">
+            <img src="./img/kollamasthilakee.jfif" class="card-img-top" alt="mbeach" width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Ashtamudi Lake</h5>
               <p class="card-text">Ashtamudi Lake, in the Kollam District of the Indian state of Kerala, is the most visited backwater and lake in the state. It possesses a unique wetland ecosystem and a large palm-shaped water body, second only in size to the Vembanad estuary ecosystem of the state.</p>
@@ -66,7 +66,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/kollambeach.jfif" class="card-img-top" alt="...">
+            <img src="./img/kollambeach.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Kollam Beach</h5>
               <p class="card-text">Kollam Beach, also known as Mahatma Gandhi Beach, is a beach at Kollam city in the Indian state of Kerala. Kollam Beach is the first 'Beach Wedding Destination' in Kerala. </p>
@@ -74,7 +74,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/kollamnediport.jfif" class="card-img-top" alt="...">
+            <img src="./img/kollamnediport.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Neendakara Port </h5>
               <p class="card-text">Neendakara Port is a major sea port and fishing harbor located at a distance of about 8 km from the town of Kollam.</p>
