--- a/Kottayam.html
+++ b/Kottayam.html
@@ -58,7 +58,7 @@
         <h3 id="spotheading">Top Three Destination</h3>
         <div class="card-group">
           <div class="card">
-            <img src="./img/kottayambirdssance.jfif" class="card-img-top" alt="mbeach">
+            <img src="./img/kottayambirdssance.jfif" class="card-img-top" alt="mbeach" width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Kumarakom Bird Sanctuary</h5>
               <p class="card-text">Kumarakom Bird Sanctuary is situated at Kumarakom in Kottayam taluk of Kottayam district in the Indian state of Kerala, on the banks of Vembanad Lake.</p>
@@ -66,7 +66,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/kottayamillakal.jfif" class="card-img-top" alt="...">
+            <img src="./img/kottayamillakal.jfif" class="card-img-top" alt="..."width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">llikkal Kallu</h5>
               <p class="card-text">llikkal Kallu is a monolith located on top of the Illickal Malaa in the Kottayam district of Kerala, India.The distance from kottayam railway station to illikal kallu is 57km. Situated at around 3400 feet above sea level. </p>
@@ -74,7 +74,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/kottayammango.jfif" class="card-img-top" alt="...">
+            <img src="./img/kottayammango.jfif" class="card-img-top" alt="..."width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Mango Meadows</h5>
               <p class="card-text">Mango Meadows is an agricultural theme park in Kaduthuruthy, Kerala, India. With more than 4800 species of plants, including 1900 species of medicinal plants, 700 species of trees, and 900 species of flowering plants, it is one of the most biodiverse places on earth.</p>
