--- a/Malapuram.html
+++ b/Malapuram.html
@@ -58,7 +58,7 @@
         <h3 id="spotheading">Top Three Destination</h3>
         <div class="card-group">
           <div class="card">
-            <img src="./img/malpuramteak.jfif" class="card-img-top" alt="mbeach">
+            <img src="./img/malpuramteak.jfif" class="card-img-top" alt="mbeach" width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Teak Museum</h5>
               <p class="card-text">Teak Museum is located 4 km from Nilambur, a town in the Malappuram district of Kerala, South India. Teak occurs naturally in India with the main teak forests found in Kerala</p>
@@ -66,7 +66,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/malapurmadyan.jfif" class="card-img-top" alt="...">
+            <img src="./img/malapurmadyan.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title"> Adyanpara Falls</h5>
               <p class="card-text"> Adyanpara Falls is a cascading waterfall in the Kurmbalangodu village of Nilambur taluk in Kerala, India. It is 14 kilometres from Nilambur town, and attracts tourists from various parts of Kerala.</p>
@@ -74,7 +74,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/malapurmrainfor.jfif" class="card-img-top" alt="...">
+            <img src="./img/malapurmrainfor.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Nedumkayam Rain Forest</h5>
               <p class="card-text">Nedumkayam Rain Forest contains Teak trees & an elephant training center</p>
