--- a/Calicut.html
+++ b/Calicut.html
@@ -61,7 +61,7 @@
         <h3 id="spotheading">Top Three Destination</h3>
         <div class="card-group">
           <div class="card">
-            <img src="./img/calibeach.jpg" class="card-img-top" alt="mbeach">
+            <img src="./img/calibeach.jpg" class="card-img-top" alt="mbeach" width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Kozhikode Beach</h5>
               <p class="card-text">Kozhikode Beach or Calicut Beach is a beach on the western side of Kozhikode, situated on the Malabar Coast of India. The beach is accessible through four road overbridges in the city. The beach has paved stones and illumination. <a href="https://en.wikipedia.org/wiki/Kozhikode_Beach">wikipedia</a></p>
@@ -69,7 +69,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/calibluec.jpg" class="card-img-top" alt="...">
+            <img src="./img/calibluec.jpg" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">BlueC Event Hub</h5>
               <p class="card-text">Network of several tranquil, sandy beaches with a walkway, rocks for seating & nearby services.  <a href="#">wikipedia</a></p>
@@ -77,7 +77,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/calimananchira.jpg" class="card-img-top" alt="...">
+            <img src="./img/calimananchira.jpg" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Mananchira</h5>
               <p class="card-text">Mananchira is a man-made freshwater pond situated in the centre of the city of Kozhikode in Kerala, southern India. The pond is 3.49 acres in area, is rectangular in shape and is fed by a natural spring <a href="https://en.wikipedia.org/wiki/Mananchira">wikipedia</a></p>
