--- a/Thiruvananthapuram.html
+++ b/Thiruvananthapuram.html
@@ -58,7 +58,7 @@
         <h3 id="spotheading">Top Three Destination</h3>
         <div class="card-group">
           <div class="card">
-            <img src="./img/thirupadtemple.jfif" class="card-img-top" alt="mbeach">
+            <img src="./img/thirupadtemple.jfif" class="card-img-top" alt="mbeach" width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title"> Padmanabhaswamy temple</h5>
               <p class="card-text">The Padmanabhaswamy temple is a Hindu temple located in Thiruvananthapuram, the state capital of Kerala, India. It is considered as the richest place of worship in the world. </p>
@@ -66,7 +66,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/thiruvkovalambeachs.jfif" class="card-img-top" alt="...">
+            <img src="./img/thiruvkovalambeachs.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">Kovalam Beach</h5>
               <p class="card-text">Kovalam Beach is a popular beach with scenic views </p>
@@ -74,7 +74,7 @@
             
           </div>
           <div class="card">
-            <img src="./img/thiruvnnapier.jfif" class="card-img-top" alt="...">
+            <img src="./img/thiruvnnapier.jfif" class="card-img-top" alt="..." width="300px" height="300px">
             <div class="card-body">
               <h5 class="card-title">The Napier Museum</h5>
               <p class="card-text">The Napier Museum is an art and natural history museum situated in Thiruvananthapuram, India. The Museum is grounds to the Trivandrum Zoo, one of the oldest zoological gardens in India.</p>
