--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/index.html#loginform">Login</a>
+                  <a class="nav-link" href="#loginform">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Signup.html">Sign Up</a>
                   </li>
                 <li class="nav-item">
-                  <a class="nav-link " href="/index.html#districtid">Districts</a>
+                  <a class="nav-link " href="#districtid">Districts</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
