--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
       <h5>Kerala Tourism</h5>
       <div class="foot">
       <h6><a href="index.html">Home</a></h6>
-      <h6><a href="/index.html#loginform">Login</a></h6>
+      <h6><a href="#loginform">Login</a></h6>
       <h6><a href="Signup.html">Sign Up</a></h6>
-      <h6><a href="/index.html#districtid">Districts</a></h6>
+      <h6><a href="#districtid">Districts</a></h6>
     </div>
       <div class="cont">
         <ul>
