--- a/Idukki.html
+++ b/Idukki.html
@@ -18,13 +18,13 @@
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#loginform">Login</a>
+              <a class="nav-link" href="#loginform">Login</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="Signup.html">Sign Up</a>
               </li>
             <li class="nav-item active">
-              <a class="nav-link " href="/index.html#districtid">Districts</a>
+              <a class="nav-link " href="#districtid">Districts</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -92,9 +92,9 @@
             <h5>Kerala Tourism</h5>
             <div class="foot">
             <h6><a href="index.html">Home</a></h6>
-            <h6><a href="/index.html#loginform">Login</a></h6>
+            <h6><a href="#loginform">Login</a></h6>
             <h6><a href="Signup.html">Sign Up</a></h6>
-            <h6><a href="/index.html#districtid">Districts</a></h6>
+            <h6><a href="#districtid">Districts</a></h6>
           </div>
             <div class="cont">
               <ul>
